internal class AnimationVariables
{
    internal static readonly string AttackTrigger = "Attack";
    internal static readonly string IsInvincible = "IsInvincible";
    internal static readonly string EndInvincible = "EndInvincible";
    internal static readonly string IsJumping = "IsJumping";
    internal static readonly string IsGrounded = "IsGrounded";
    internal static readonly string IsDead = "IsDead";
    internal static readonly string GameEnded = "GameEnded";
    internal static readonly string IsMoving = "IsMoving";
}